--- a/static/css/pythonclub.css
+++ b/static/css/pythonclub.css
@@ -6,3 +6,15 @@ body {
     margin: auto;
     display: block;
 }
+
+
+.post-link {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: rgb(51, 51, 50);
+    border: 1px dashed #999;
+    border-bottom: 0px;
+    padding: 0.5em;
+    display: block;
+}
