--- a/static/css/pythonclub.css
+++ b/static/css/pythonclub.css
@@ -1,6 +1,10 @@
 body {
     width: 465px;
     min-height: 250px;
+
+    font-family: sans-serif;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 .logo {
@@ -8,14 +12,17 @@ body {
     display: block;
 }
 
-
 .post-link {
-    font-family: sans-serif;
-    font-size: 1.2em;
-    font-weight: bold;
     color: rgb(51, 51, 50);
     border: 1px dashed #999;
     border-bottom: 0px;
     padding: 0.5em;
     display: block;
+}
+
+#failed-box {
+    color: rgb(51, 51, 50);
+    border: 1px dashed #999;
+    padding: 0.5em;
+    text-align: center;
 }
