Removido visibility do failed-box e adicionado controle de visibilidade no post-list

--- a/static/css/pythonclub.css
+++ b/static/css/pythonclub.css
@@ -20,6 +20,10 @@ body {
     display: block;
 }
 
+#post-list {
+    visibility: hidden;
+}
+
 #failed-box {
     color: rgb(51, 51, 50);
     border: 1px dashed #999;
